# GoIT_PyWeb_HW_8

./: pyproject.toml
MongoDB/: config.ini  connect.py  main.py  models.py  seeds.py
RabbitMQ/: config.ini  consumer.py  models.py  producer.py
