[tool.poetry]
name = "goit-pyweb-hw-8"
version = "0.1.0"
description = ""
authors = ["fyodor <fyodor.shevchenko@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_pyweb_hw_8"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.26.0"
pika = "^1.3.1"
faker = "^16.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
